# zc_pet_server

./: CMakeLists.txt  srv_build.sh
b/client/simple-client/: pet_client
b/server/: pet_server
client/: CMakeLists.txt
client/simple-client/: CMakeLists.txt  main.c  zc_socket_path.h
server/: CMakeLists.txt
server/exe/: main.c
server/lib/inc/: zc_socket_path.h  zc_srv.h
server/lib/src/: zc_srv.c
